--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -5,32 +5,20 @@
 
 [[main]]
   name = "Home"
-  url = "#about"
+  url = "#start"
   weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "About"
+  url = "#about"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Gallery"
-  url = "#gallery"
+  name = "Pricelist"
+  url = "#pricelist"
   weight = 40
 
 [[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
