--- a/config/_default/menus.el.toml
+++ b/config/_default/menus.el.toml
@@ -28,6 +28,12 @@
   url = "#contact"
   weight = 60
 
+ [[main_right]]
+name = "<i class=\"fab fa-facebook\" style=\"font-size: 0.90rem;\"></i>"
+  post = ""
+  url = "https://el-gr.facebook.com/redpointathensclimbingcenter/"
+  weight = 1 
+
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
