--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -112,7 +112,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "facebook", icon_pack = "fab", name = "Facebook", link = "https://www.facebook.com/redpointathensclimbingcenter/"},
+  {icon = "facebook", icon_pack = "fab", name = "Facebook", link = "https://el-gr.facebook.com/redpointathensclimbingcenter/"},
   #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
   #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
