--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -45,7 +45,7 @@ local_business_type = "HealthAndBeautyBusiness"
 
 # Organization name (optional)
 # Enter an organization or project name. Defaults to the site title from `config.toml`.
-org_name = "redpoint"
+org_name = "Redpoint Athens Climbing Center"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
 description = ""
